# contextual-bandit-benchmark

./: .gitignore  00_testin.ipynb  01_data.ipynb  02_preprocessing.ipynb  03_main.ipynb  03_ucb_rd.ipynb  04_ts_comparison.ipynb  04_ts_rd.ipynb  05_synthtic_data.ipynb  06_ope_evaluation.ipynb  07_additional_modeling.ipynb  README.md  compare_linUCB_linTS.ipynb  data_exploration.ipynb  linucb.py  load_opb.py  main.ipynb  obd.ipynb  pyproject.toml  synthetic.ipynb  ts_linear.py
appendix/: additional_synthetic.ipynb
evaluate/: evaluate_all_policies.py  evaluate_random_policy.py
obp-new-env/: pyvenv.cfg
obp-py311-env/: pyvenv.cfg
obp-py39-env/: pyvenv.cfg
results/: dr_curve_linucb_alpha0.0_seed0.npy  dr_curve_linucb_alpha0.0_seed1.npy  dr_curve_linucb_alpha0.0_seed10.npy  dr_curve_linucb_alpha0.0_seed11.npy  dr_curve_linucb_alpha0.0_seed12.npy  dr_curve_linucb_alpha0.0_seed13.npy  dr_curve_linucb_alpha0.0_seed14.npy  dr_curve_linucb_alpha0.0_seed15.npy  dr_curve_linucb_alpha0.0_seed16.npy  dr_curve_linucb_alpha0.0_seed17.npy  dr_curve_linucb_alpha0.0_seed18.npy  dr_curve_linucb_alpha0.0_seed19.npy  dr_curve_linucb_alpha0.0_seed2.npy  dr_curve_linucb_alpha0.0_seed20.npy  dr_curve_linucb_alpha0.0_seed21.npy  dr_curve_linucb_alpha0.0_seed22.npy  dr_curve_linucb_alpha0.0_seed23.npy  dr_curve_linucb_alpha0.0_seed24.npy  dr_curve_linucb_alpha0.0_seed25.npy  dr_curve_linucb_alpha0.0_seed26.npy  dr_curve_linucb_alpha0.0_seed27.npy  dr_curve_linucb_alpha0.0_seed28.npy  dr_curve_linucb_alpha0.0_seed29.npy  dr_curve_linucb_alpha0.0_seed3.npy  dr_curve_linucb_alpha0.0_seed4.npy  (+246 more)
