[project]
name = "contextual-bandit-benchmark"
version = "0.1.0"
description = "Reinforcement Learning Final Project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "numpy<2",
    "obp>=0.4.1",
    "pandas<2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
